--- a/.gitignore
+++ b/.gitignore
@@ -41,12 +41,18 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
 
 # TypeScript cache
 *.tsbuildinfo
+
+# Dependency directories
+jspm_packages/
 
 # Optional npm cache directory
 .npm
@@ -134,3 +140,16 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Test
+test-results/
